--- a/MovingAvgs.ipynb
+++ b/MovingAvgs.ipynb
@@ -11,7 +11,9 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Hello World\")"
+    "print(\"Hello World\")\n",
+    "\n",
+    "print(\"\")"
    ]
   }
  ],
